Refonte du layout : passage de flexbox à CSS grid

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maquette Helium</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <!-- 🔹 Barre de navigation -->
@@ -29,14 +30,13 @@
         </p>
       </div>
     </div>
-
-    <div class="header-right">
-      <img src="./img/main.png" alt="modem pic" id="modem">
-    </div>
+    
+    <img class="header-right" src="./img/main.png" alt="modem pic" id="modem"/>
+  
   </header>
 
   <!-- 🔹 Section des technologies et investisseurs -->
-  <section>
+  <section class="infos">
     <div class="infos-left">
       <h4>Core Technologies</h4>
       <div class="btn-container">
